--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,5 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+WPP_API_ENDPOINT="https://graph.facebook.com/v21.0/{}"
+WPP_API_TOKEN=""
